# Ray

./: .gitignore  CMakeLists.txt  README.md  game.cpp  input_handler.cpp  main.cpp  ray.cpp  to_do.txt
include/: buffer2d.hpp  camera.hpp  context.hpp  direction3.hpp  doublebuffer.hpp  input_handler.hpp  logger.hpp  milkman.hpp  ncurses_window.hpp  pixel.hpp  point2.hpp  point3.hpp  ray.hpp  scene.hpp  triangle3.hpp
src/: camera.cpp  context.cpp  direction3.cpp  game.cpp  input_handler.cpp  ncurses_window.cpp  pixel.cpp  point2.cpp  point3.cpp  ray.cpp  scene.cpp  triangle3.cpp
utils/: key_show.cpp
